--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,3 +107,10 @@ color: #fff;
     letter-spacing: 2px;
 
 }
+
+/* -------------------------------Hover.css */
+
+.hvr-sweep-to-bottom:before{
+background: rgba(0, 0, 0, 0.2) !important;
+height: 120px;
+}
