--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -110,7 +110,7 @@ color: #fff;
 
 /* -------------------------------Hover.css */
 
-.hvr-sweep-to-bottom:before{
-background: rgba(0, 0, 0, 0.2) !important;
+div #nav li a.hvr-sweep-to-bottom:before{
+background: rgba(0, 0, 0, 0.2) ;
 height: 120px;
 }
