--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,16 +51,16 @@ h4 {
 }
 
 .section-column {
-    display: table-cell;
-    padding: 0 30px 30px;
-    float: none;
+  display: table-cell;
+  padding: 0 30px 30px;
+  float: none;
 }
 
-.section-heading{
-    font-family: "Exo" , sans-serif;
-    font-weight: 300;
-    margin-top: 25px;
-    margin-bottom: 40px;
+.section-heading {
+  font-family: "Exo", sans-serif;
+  font-weight: 300;
+  margin-top: 25px;
+  margin-bottom: 40px;
 }
 
 /* -------------------------------Heading */
@@ -150,7 +150,7 @@ header {
 
 /* -------------------------------Hover.css */
 
-div #nav li a.hvr-sweep-to-bottom:before {
+.hvr-sweep-to-bottom:before {
   background: rgba(0, 0, 0, 0.2);
   height: 120px;
 }
@@ -207,14 +207,13 @@ footer {
   padding: 20px;
 }
 
-
 /* -------------------------------Three Reasons */
 
 .three-reasons-icon {
-font-size: 26px;
-color: #e67e22;
+  font-size: 26px;
+  color: #e67e22;
 }
 
 .three-reasons-heading {
-    margin-bottom: 15px;
+  margin-bottom: 15px;
 }
